--- a/Du_an2/assets/css/style.css
+++ b/Du_an2/assets/css/style.css
@@ -21,6 +21,7 @@ body {
 
 /***************Common*****************/
 .content {
+	position: relative;
 	width: 1117px;
 	max-width: calc(100% - 48px);
 	margin-left: auto;
@@ -50,6 +51,9 @@ span {
 
 
 /*******Header*********/
+.header {
+	background: #FFFCF4;
+}
 
 .header .row {
 	display: flex;
@@ -66,6 +70,7 @@ span {
 
 .header.fixed {
 	position: sticky;
+	z-index: 1;
 	top: -18px;
 }
 
@@ -108,6 +113,10 @@ span {
 }
 
 /********Hero*************/
+.hero {
+	background: #FFFCF4;
+	padding: 56px 0 64px;
+}
 
 .hero .body {
 	position: relative;
@@ -228,13 +237,12 @@ span {
 	border-radius: 12px;
 	background: #FFF;
 	box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
-	z-index: 1;
+	z-index: 0;
 }
 
 .base .couse {
 	display: flex;
 	align-items: center;
-
 }
 
 .base .group {
@@ -257,10 +265,115 @@ span {
 }
 
 .base strong {
-	margin-top: 10px;
 	color: #171100;
 	font-size: 1.8rem;
 	font-style: normal;
 	font-weight: 600;
+	line-height: 2;
 	text-wrap: nowrap;
+}
+
+/*******Course************/
+.courses{
+	margin-top: 200px;
+}
+.courses .sub-title {
+	color: #171100;
+	font-family: Sen;
+	font-size: 3.8rem;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 1.2;
+	letter-spacing: -0.76px;
+	margin-bottom: 16px;
+}
+
+.courses .title {
+	color: #5F5B53;
+	font-size: 1.8rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 1.6;
+	letter-spacing: 1.05;
+	width: 458px;
+}
+
+.courses .icon {
+	position: absolute;
+	display: inline-block;
+	right: 0;
+	top: 36px;
+}
+
+.courses .card-group {
+	display: flex;
+	gap: 0 30px;
+}
+
+.card {
+	margin-top: 55px;
+	width: 370px;
+	height: 466px;
+	border-radius: 12px;
+	border: 1px solid #E2DFDA;
+	background: #FFF;
+}
+
+.card .img-card {
+	width:100%;
+	height: 278px;
+	border-radius: 12px 12px 0px 0px;
+	object-fit: cover;
+}
+
+.card .design {
+	color: #171100;
+	font-size: 1.8;
+	font-style: normal;
+	font-weight: 600;
+	line-height: 1.66px;
+	margin-top: 6px;
+}
+
+.card .info {
+	margin: 16px 22px 22px;
+}
+
+.info .desc {
+	margin-top: 6px;
+	color: #5F5B53;
+	font-size: 1.4rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 1.85;
+}
+
+.info .btn-group {
+	margin-top: 12px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.info .cost {
+	color: #171100;
+	font-size: 1.8rem;
+	font-style: normal;
+	font-weight: 600;
+	line-height: 1.66;
+}
+
+.info .btn-card {
+	min-width: 118px;
+	line-height: 50px;
+}
+
+.info .spacial {
+	background-color: #FFB900;
+}
+
+.info .design-catalog {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
