--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,9 +274,10 @@ span {
 }
 
 /*******Course************/
-.courses{
-	margin-top: 200px;
+.courses {
+	padding: 200px 0 ;
 }
+
 .courses .sub-title {
 	color: #171100;
 	font-family: Sen;
@@ -320,7 +321,7 @@ span {
 }
 
 .card .img-card {
-	width:100%;
+	width: 100%;
 	height: 278px;
 	border-radius: 12px 12px 0px 0px;
 	object-fit: cover;
@@ -376,4 +377,81 @@ span {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+}
+
+/****Testimonial***/
+
+.testimonial {
+	background: #2E2100;
+	;
+}
+
+.testimonial .body {
+	width: 1440px;
+	height: 380px;
+	background: #2E2100;
+}
+
+.testimonial .body {
+	display: flex;
+	align-items: center;
+	width: 1117px;
+}
+
+.testimonial .person .avata {
+	width: 72px;
+	height: 72px;
+	border-radius: 72px;
+	object-fit: cover;
+}
+
+.testimonial .person .name {
+	margin-top: 18px 0 4px;
+	color: #F7F7F7;
+	font-family: Sen;
+	font-size: 2.4rem;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 1.4;
+}
+
+.person .desc {
+	text-wrap: nowrap;
+	min-width: 100px;
+	color: #BFBCB2;
+	font-size: 1.4rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 1.85;
+}
+
+.person .group-icon {
+	margin-top: 28px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 0 6px;
+}
+
+.person .cicle {
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+	background-color: #FFB900;
+}
+
+.person .icon-1,
+.person .icon-3 {
+	opacity: 50%;
+}
+
+.testimonial .comment {
+	margin-left: auto;
+	color: #FFF;
+	font-size: 2.6rem;
+	font-style: italic;
+	font-weight: 400;
+	line-height: 1.53;
+	width: 740px;
+	text-align: justify;
 }
